Bug 436866 [server] email address change confirmation fails